--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.0",
+    "@types/pouchdb": "^6.4.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.0",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
+    "pouchdb": "^7.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
