--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.0",
     "classnames": "^2.2.6",
+    "enzyme": "^3.11.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "pouchdb": "^7.1.1",
