--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -18,6 +19,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "classnames": "^2.2.6",
+    "create-react-component-folder": "^0.1.30",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "lodash": "^4.17.15",
@@ -31,8 +33,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.7.2",
-    "create-react-component-folder": "^0.1.30"
+    "reselect": "^4.0.0",
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
